feat: 可视化样式修改

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <video id="videoEl" autoplay muted></video>
       <canvas id="trackBox"></canvas>
       </div>
+      <div class="ageCharts">
+        <div id="ageCharts_true"></div>
+      </div>
+      
     </div>
   </div>
   <div class="right">
