--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </div>
   <div class="right">
     <div id="emotionPie"></div>
+    <div class="dataShow"></div>
   </div> 
     <canvas id="canvasImg" style="position:fixed;left:100%;"></canvas>
   </div>
